[project]
name = "backend-livros-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Danilo Machuca",email = "danilo.machuca.dev@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.139.0,<0.140.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
